# vdnn

./: CMakeLists.txt  Makefile  vdnn_sample.cpp
